Resolves: tdf#126844 focus in to combobox with entries not seen in parent

there isn't a focus-in on the combobox, only the entry. So use
entry focus-in as focus-in (we already do this for the combobox dropdown)

Change-Id: I09cf6eb896acbbea5aed2d3b2aa238593ddcb793